test/tests/stages/18_structures/valid/params_and_returns/return_pointer_in_rax.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[37]:
  struct
  identifier(s)
  {
  long
  identifier(l1)
  ;
  long
  identifier(l2)
  ;
  long
  identifier(l3)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(return_in_mem)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(result)
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  return
  identifier(result)
  ;
  }
