test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_struct_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  struct
  identifier(s)
  ;
  extern
  struct
  identifier(s)
  identifier(foo)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  .
  identifier(a)
  ;
  }
